--- a/src/LightNap.Core/LightNap.Core.csproj
+++ b/src/LightNap.Core/LightNap.Core.csproj
@@ -82,4 +82,7 @@
       <DependentUpon>RegistrationWelcomeTemplate.tt</DependentUpon>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Competitions\Dto\Request\" />
+  </ItemGroup>
 </Project>
